Upload e download de arquivos de teste implementados

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
             <script	src="vendor/ng-file-upload/ng-file-upload-shim.min.js"></script>
             <script	src="js/main.js"></script>
 			<script	src="js/services/AtividadeService.js"></script>
+            <script	src="js/services/DownloadTesteService.js"></script>
             <script	src="js/controllers/AtividadeController.js"></script>
             <script	src="js/controllers/AtividadesController.js"></script>
         </div>
